# Explorers-with-Thingy-91-x---Zephyr

./: README.md
BLE_NRF9151/: CMakeLists.txt  Kconfig  README.rst  prj.conf
BLE_NRF9151/boards/: thingy91x_nrf9151_cpuapp.overlay  thingy91x_nrf9151_ns.overlay
BLE_NRF9151/src/: gps_coap.c  gps_coap.h  main_clean.c  mqtt_connection.c  mqtt_connection.h
connectivity_bridge/: README.rst  prj.conf  setup_ncs_env.sh
connectivity_bridge/boards/: thingy91x_nrf5340_cpuapp.conf  thingy91x_nrf5340_cpuapp.overlay
connectivity_bridge/src/modules/: ble_handler.c
